--- a/package.json
+++ b/package.json
@@ -1,44 +1,21 @@
 {
-  "name": "salvando-labs",
-  "version": "0.0.0",
+  "name": "backoffice-rh",
   "private": true,
+  "version": "0.0.0",
+  "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview",
-    "test:unit": "vitest",
-    "test:e2e": "start-server-and-test preview http://localhost:4173 'cypress run --e2e'",
-    "test:e2e:dev": "start-server-and-test 'vite dev --port 4173' http://localhost:4173 'cypress open --e2e'",
-    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore",
-    "format": "prettier --write src/"
+    "build": "vue-tsc -b && vite build",
+    "preview": "vite preview"
   },
   "dependencies": {
-    "autoprefixer": "^10.4.17",
-    "axios": "^1.6.7",
-    "pinia": "^2.1.7",
-    "pinia-plugin-persistedstate": "^3.2.1",
-    "postcss": "^8.4.33",
-    "swiper": "^11.0.7",
-    "vue": "^3.3.4",
-    "vue-gtag": "^2.0.1",
-    "vue-router": "^4.2.5",
-    "vuetify": "^3.0.0"
+    "axios": "^1.7.8",
+    "vue": "^3.5.12"
   },
   "devDependencies": {
-    "@mdi/font": "^7.3.67",
-    "@rushstack/eslint-patch": "^1.3.3",
-    "@vitejs/plugin-vue": "^4.4.0",
-    "@vue/eslint-config-prettier": "^8.0.0",
-    "@vue/test-utils": "^2.4.1",
-    "cypress": "^13.3.1",
-    "eslint": "^8.49.0",
-    "eslint-plugin-cypress": "^2.15.1",
-    "eslint-plugin-vue": "^9.17.0",
-    "jsdom": "^22.1.0",
-    "prettier": "^3.0.3",
-    "sass": "^1.69.7",
-    "start-server-and-test": "^2.0.1",
-    "vite": "^4.4.11",
-    "vitest": "^0.34.6"
+    "@vitejs/plugin-vue": "^5.1.4",
+    "typescript": "~5.6.2",
+    "vite": "^5.4.10",
+    "vue-tsc": "^2.1.8"
   }
 }
