--- a/package.json
+++ b/package.json
@@ -9,36 +9,67 @@
     "test:unit": "vitest",
     "test:e2e": "start-server-and-test preview http://localhost:4173 'cypress run --e2e'",
     "test:e2e:dev": "start-server-and-test 'vite dev --port 4173' http://localhost:4173 'cypress open --e2e'",
-    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore",
+    "lint": "eslint . --ext .js,.jsx,.ts,.tsx --fix --ignore-path .gitignore",
     "format": "prettier --write src/"
   },
   "dependencies": {
-    "autoprefixer": "^10.4.17",
-    "axios": "^1.6.7",
-    "pinia": "^2.1.7",
-    "pinia-plugin-persistedstate": "^3.2.1",
-    "postcss": "^8.4.33",
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.0",
+    "@hookform/resolvers": "^2.9.10",
+    "@mui/icons-material": "^5.15.13",
+    "@mui/material": "^5.16.6",
+    "@mui/styled-engine-sc": "^6.0.0-alpha.18",
+    "axios": "^0.27.2",
+    "date-fns": "^2.29.3",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-hook-form": "^7.41.0",
+    "react-icons": "^4.10.1",
+    "react-loading-skeleton": "^3.2.0",
+    "react-query": "^3.39.3",
+    "react-router-dom": "^6.26.0",
+    "react-toastify": "^9.1.1",
     "swiper": "^11.0.7",
-    "vue": "^3.3.4",
-    "vue-gtag": "^2.0.1",
-    "vue-router": "^4.2.5",
-    "vuetify": "^3.0.0"
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@mdi/font": "^7.3.67",
     "@rushstack/eslint-patch": "^1.3.3",
-    "@vitejs/plugin-vue": "^4.4.0",
-    "@vue/eslint-config-prettier": "^8.0.0",
-    "@vue/test-utils": "^2.4.1",
+    "@tailwindcss/typography": "^0.5.8",
+    "@testing-library/jest-dom": "^5.14.1",
+    "@testing-library/react": "^13.0.0",
+    "@testing-library/user-event": "^13.2.1",
+    "@types/jest": "^28.1.5",
+    "@types/node": "^18.11.18",
+    "@types/react": "^18.0.0",
+    "@types/react-dom": "^18.0.0",
+    "@types/react-hooks-helper": "^1.6.4",
+    "@types/react-select": "^5.0.1",
+    "@types/styled-components": "^5.1.25",
+    "@types/uuid": "^8.3.4",
+    "@vitejs/plugin-react-swc": "^3.8.1",
+    "autoprefixer": "^10.4.7",
     "cypress": "^13.3.1",
     "eslint": "^8.49.0",
     "eslint-plugin-cypress": "^2.15.1",
-    "eslint-plugin-vue": "^9.17.0",
-    "jsdom": "^22.1.0",
-    "prettier": "^3.0.3",
+    "eslint-plugin-react": "^7.37.5",
+    "eslint-plugin-react-hooks": "^5.2.0",
+    "jsdom": "^26.0.0",
+    "postcss": "^8.4.14",
+    "prettier": "^2.7.1",
     "sass": "^1.69.7",
     "start-server-and-test": "^2.0.1",
-    "vite": "^4.4.11",
-    "vitest": "^0.34.6"
+    "tailwindcss": "^3.1.6",
+    "typescript": "^4.4.2",
+    "vite": "^6.2.2",
+    "vite-plugin-commonjs": "^0.10.4",
+    "vite-plugin-svgr": "^4.3.0",
+    "vitest": "^3.0.9"
+  },
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
   }
 }
